# Budget-Sync

./: .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_db.py  updated-readme.md
.github/workflows/: ci-cd.yml
app/: __init__.py
app/budget/: budget_logic.py  routes.py
app/config/: settings.py
app/templates/: base.html
archives/: cli.py
archives/auth/: models.py
archives/tax_api/: mock_client.py  tax_api.py
archives/tax_api/tax_rates/: cache.py  client.py  models.py  routes.py
docs/budget/: documentation.md
docs/budget/aws/: BudgetSync_AWS_Deployment_Guide.md
docs/budget/genAI/: genAI.md
docs/budget/software/: heroku_deployment.md
docs/deployment/: deployment_roadmap.md  heroku_deploy_checklist.md
docs/issues/layout_refactor/: src_layout_refactor.md
docs/rulesets/password_prompt/: password_reset.md
migrations/versions/: 541bf19e0984_add_tax_related_fields_to_profile_model.py  78b7e6c12ce6_initial_schema.py
scripts/: populate_state_data.py
src/budget_sync/: __init__.py  budget.py  forms.py  models.py  utils.py
src/budget_sync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/budget_sync/api/: services.py
src/budget_sync/auth/: __init__.py  forms.py  routes.py
src/budget_sync/budget/: __init__.py  budget_logic.py  routes.py
src/budget_sync/config/: __init__.py  settings.py
src/budget_sync/debt/: __init__.py
src/budget_sync/helpers/: __init__.py  budget_helpers.py  email_helpers.py
src/budget_sync/main/: __init__.py  routes.py
src/budget_sync/profile/: __init__.py  forms.py  routes.py
src/budget_sync/static/js/: budget_create.js  income.js
src/budget_sync/templates/: base.html  home.html
src/budget_sync/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
src/budget_sync/templates/budget/: budget_categories.html  budget_create.html  budget_input.html  budget_results.html  edit_budget.html  expense_review.html  expense_selection.html  income.html  name.html  payment_amounts.html  preview.html  results.html  view_budget.html
src/budget_sync/templates/main/: dashboard.html
src/budget_sync/templates/profile/: profile.html
src/budget_sync/templates/weather/: weather_form.html
src/budget_sync/weather/: routes.py  weather_service.py
tests/: conftest.py
tests/functional/: test_auth_views.py  test_budget_views.py  test_password_reset.py  test_profile_views.py  test_weather_views.py
tests/integration/: test_db.py  test_weather_api.py
tests/unit/: test_email_helpers.py  test_models.py  test_utils.py
