[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-sync"
version = "0.1.0"
description = "Personal Budget Management Application"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Brice Nelson" }]

dependencies = [
    # --- Flask core ---
    "Flask==3.1.0",
    "Flask-Bcrypt==1.0.1",
    "Flask-Cors==6.0.1",
    "Flask-DebugToolbar==0.16.0",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.7",
    "Flask-Session==0.8.0",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Testing==0.8.1",
    "Flask-WTF==1.2.2",

    # --- Database / ORM ---
    "SQLAlchemy==2.0.36",
    "alembic==1.12.1",
    "pg8000==1.29.8",
    "psycopg==3.1.20",
    "psycopg2-binary==2.9.10",
    "greenlet==3.1.1",
    "Mako==1.2.4",
    "scramp==1.4.4",

    # --- Authentication / Security ---
    "bcrypt==4.2.1",
    "itsdangerous==2.2.0",
    "email_validator==2.2.0",

    # --- Redis / Caching ---
    "redis==5.2.1",
    "cachelib==0.13.0",
    "async-timeout==5.0.1",

    # --- Utilities ---
    "click==8.1.8",
    "colorama==0.4.6",
    "python-dotenv==0.21.1",
    "requests==2.32.5",
    "packaging==24.0",
    "Faker==18.13.0",
    "python-dateutil==2.9.0.post0",
    "typing_extensions==4.7.1",
    "six==1.17.0",
    "charset-normalizer==3.4.1",
    "urllib3==2.5.0",
    "idna==3.10",
    "certifi==2025.1.31",
    "tzdata==2025.1",

    # --- Flask dependencies ---
    "Werkzeug==3.1.3",
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.5",
    "WTForms==3.0.1",
    "blinker==1.9.0",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest==7.4.4",
    "pytest-cov==7.0.0",
    "pytest-flask==1.3.0",

    # --- Linting / Code Quality ---
    "ruff==0.13.2",
    "coverage==7.11.0",
    "iniconfig==2.0.0",
    "pluggy==1.2.0",

    # --- Metadata helpers ---
    "importlib-metadata==6.7.0",
    "importlib-resources==5.12.0",
    "tomli==2.0.1",
    "zipp==3.23.0",
    "exceptiongroup==1.2.2",
    "msgspec==0.19.0",
    "asn1crypto==1.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
exclude = [
    "archives",  # ignore old shelved code
    "migrations",  # common to exclude auto-generated alembic files
]

[tool.uv.workspace]
members = [
    "budget_sync",
]


# --- uv configuration ---
[tool.uv]
# Default PyPI index
index-url = "https://pypi.org/simple"






# --- Pytest configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --disable-warnings --maxfail=3 -q --cov=src --cov-report=term-missing"
